# dep-obj

./: Cargo.toml  README.md
.github/workflows/: ci.yml  rust.yml
ensure_no_std/: Cargo.toml
ensure_no_std/src/: main.rs
examples/: game.rs  game_by_template.rs  game_with_builder.rs  inventory.rs  item.rs  item_obj.rs  item_weight.rs  item_weight_manual.rs  item_weight_obj.rs  item_weight_with_builder.rs  item_weight_with_builder_manual.rs  item_with_builder.rs  rs_trigger.rs  rs_trigger_by_template.rs
src/: base.rs  binding.rs  fw.rs  lib.rs  templates.rs
src/templates/: detached_dynamic_dep_type.rs  detached_static_dep_obj.rs  detached_static_dep_type.rs  detached_static_dep_type_2.rs
