[package]
edition = "2021"
name = "dep-obj"
version = "0.35.1"
#rust-version = "1.61"
authors = ["warlock <internalmike@gmail.com>"]
description = "Dependency object: effective reactive heterogeneous container."
readme = "README.md"
documentation = "https://docs.rs/dep-obj/"
keywords = ["property", "reactive", "dependency", "runtime", "type"]
categories = ["rust-patterns", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/dep-obj"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
components-arena = { version = "3.0.0", features = ["dyn-context"] }
downcast-rs = { version = "1.2.0", default-features = false }
dyn-clone = "1.0.2"
dyn-context = "0.17.0"
educe = "0.4.13"
generics = "0.4.0"
indoc = "1.0.6"
macro-attr-2018 = "2.0.1"
memoffset = { version = "0.6.5", features = ["unstable_const"] }
panicking = { version = "0.1.0", default-features = false }
paste = "1.0.0"
phantom-type = { version = "0.4.1", default-features = false }
