[package]
edition = "2021"
name = "dep-obj"
version = "0.37.5"
#rust-version = "nightly"
authors = ["warlock <internalmike@gmail.com>"]
description = "Dependency object: effective reactive heterogeneous container."
readme = "README.md"
documentation = "https://docs.rs/dep-obj/"
keywords = ["property", "reactive", "dependency", "runtime", "type"]
categories = ["rust-patterns", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/dep-obj"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
components-arena = { version = "3.0.0", features = ["dyn-context"] }
composable-allocators = "0.0.2"
dyn-clone = "1.0.5"
dyn-context = "0.17.0"
educe = "0.4.13"
either = { version = "1.6.1", default-features = false }
generics = "0.4.0"
indoc = "1.0.6"
macro-attr-2018 = "2.0.1"
memoffset = { version = "0.6.5", features = ["unstable_const"] }
panicking = { version = "0.1.0", default-features = false }
paste = "1.0.0"
phantom-type = { version = "0.4.1", default-features = false }

[dev-dependencies]
downcast-rs = { version = "1.2.0", default-features = false }

[badges]
maintenance = { status = "experimental" }
