[package]
edition = "2021"
name = "ensure_no_std"
version = "0.0.0"
publish = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
components-arena = { version = "3.0.0", git = "https://github.com/A1-Triard/components-arena.git", features = ["dyn-context"] }
dep-obj = { path = ".." }
dyn-context = "0.16.0"
libc_alloc = "1.0.3"
macro-attr-2018 = "2.0.1"

[target.'cfg(not(windows))'.dependencies]
libc = { version = "0.2", default-features = false }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi"] }
